--- a/android-developer.html
+++ b/android-developer.html
@@ -49,6 +49,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://pickwings.join.com/jobs/442899-android-developer'>Job @ Pickwings (Z?rich): Android Developer | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/rappi/4171a01c-99eb-4937-afd6-f1ea147ad1c8'>Rappi - Android Developer - Kotlin / Java</a></h5> 
 <p><span class="badge badge-light">Bogot?</span></p>
 <p>Posted on: 2019-10-31</p>
@@ -81,7 +85,7 @@
 <p><span class="badge badge-light">Malm?Copenhagen</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/asanarebel/jobs/4035617002'>Job Application for Android Developer (f/m/d) at Asana Rebel</a></h5> 
+<h5><a href='https://boards.greenhouse.io/asanarebel/jobs/4035617002'>Job Application for Android Developer (f/m/d) at Asana Rebel</a></h5> 
 <p><span class="badge badge-light">Berlin  Berlin</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -153,7 +157,7 @@ Android Developer at Dyson in Wiltshire | Android jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/commencis/d7fe92a6-ffa5-428a-a70b-50532b7b018f'>Commencis - Senior Android Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/commencis/d7fe92a6-ffa5-428a-a70b-50532b7b018f'>Commencis - Senior Android Developer</a></h5> 
 <p><span class="badge badge-light">Istanbul</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -232,7 +236,7 @@ mobile developers. We're looking for a developer who has solid, demonstrable?...
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://bourneleisure.csod.com/ux/ats/careersite/1/home/requisition/9276?c=bourneleisure'>Junior Android Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bourneleisure.csod.com/ux/ats/careersite/1/home/requisition/9276?c=bourneleisure'>Junior Android Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 10, 2019 ... Junior Android Developer We are looking for a hands-on Android App Developer 
 with a passion for creating innovative digital experiences, to help us launch the?...</p>
@@ -254,7 +258,7 @@ development and maintenance of applications aimed at the public as well as?...</
 <p><span class="badge badge-light">Mc Lean, VA</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/GorehaGmbH/743999697634633--senior-android-developer-m-f-d-'>Goreha GmbH (Senior) Android Developer (m/f/d) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GorehaGmbH/743999697634633--senior-android-developer-m-f-d-'>Goreha GmbH (Senior) Android Developer (m/f/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -278,7 +282,7 @@ development and maintenance of applications aimed at the public as well as?...</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-20</p>
 <hr/>
-<h5><a href='https://www.xero.com/about/careers/job/7ef51fe2ff87be8195ea2529f09b3fcc5e6ed0fce7d9a9f3f0278a209d96e84e/'>Android Developer | Xero </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.xero.com/about/careers/job/7ef51fe2ff87be8195ea2529f09b3fcc5e6ed0fce7d9a9f3f0278a209d96e84e/'>Android Developer | Xero </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -354,7 +358,7 @@ participating in driving our already successful banking service to new heights.<
 <p><span class="badge badge-light">Vietnam  Ho Chi Minh Vietnam</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999697332294-android-developer-middle-'>Adevinta Android Developer (Middle) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999697332294-android-developer-middle-'>Adevinta Android Developer (Middle) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Minsk France Italy Mexico</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -454,7 +458,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TrophyRoomPteLtd/743999697018270-senior-android-developer'>TrophyRoom Pte Ltd Senior Android Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TrophyRoomPteLtd/743999697018270-senior-android-developer'>TrophyRoom Pte Ltd Senior Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -484,10 +488,6 @@ Apply for this job. Cornershop es un servicio que te lleva el s?per y distintas?
 <p>Posted on: 2019-10-09</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/leiainc/jobs/1903630'>Job Application for Junior Android Developer - Media at LEIA Inc.</a></h5> 
-<p><span class="badge badge-light">Menlo Park, CA</span></p>
-<p>Posted on: 2019-10-09</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/leiainc/jobs/1903644'>Job Application for Junior Android Developer - Automotive at LEIA Inc.</a></h5> 
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
